Domain migration to hypatiahertz.com, fix Apple Music icon, left-align buttons, update social links

--- a/style.css
+++ b/style.css
@@ -981,8 +981,9 @@ section {
 .btn-platform {
   display: flex;
   align-items: center;
-  justify-content: center;
-  text-align: center;
+  justify-content: flex-start;
+  text-align: left;
+  padding-left: 24px;
   height: 52px;
   font-size: 1rem;
   font-weight: 600;
